--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "External/RoutingKit"]
 	path = External/RoutingKit
 	url = https://github.com/RoutingKit/RoutingKit.git
+[submodule "External/json"]
+	path = External/json
+	url = https://github.com/nlohmann/json
