--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ find_package(OpenMP)
 find_library(PROJ_LIBRARY proj)
 find_library(RoutingKit_LIBRARY routingkit)
 find_package(nlohmann_json)
+find_package(TBB REQUIRED)
 
 
 
