--- a/RawData/CMakeLists.txt
+++ b/RawData/CMakeLists.txt
@@ -50,7 +50,8 @@ target_compile_definitions(TransformLocations PRIVATE CSV_IO_NO_THREAD)
 target_link_libraries(TransformLocations ${PROJ_LIBRARY} ${RoutingKit_LIBRARY})
 
 
-add_executable(CheckExistingAttributesInNetworkFile CheckExistingAttributesInNetworkFile.cc)
+add_executable(CheckExistingAttributesInNetworkFile CheckExistingAttributesInNetworkFile.cc
+        ../Algorithms/KaRRi/LastStopSearches/NoOpLastStopBucketEnvironment.h)
 target_compile_definitions(CheckExistingAttributesInNetworkFile PRIVATE CSV_IO_NO_THREAD)
 
 add_executable(GenerateGeoJsonForGraph GenerateGeoJsonForGraph.cc)
