--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 
 # Generated output files
 /Outputs*/
-/Publications/KaRRi/Outputs_*/
+/Publications/KaRRi/Outputs*/
 
 # Various config files.
 /.settings/
@@ -16,3 +16,4 @@
 /.project
 /.pydevproject
 /.idea/
+/.vscode/
