Extracted Elliptic Buckets

--- a/RawData/CMakeLists.txt
+++ b/RawData/CMakeLists.txt
@@ -59,6 +59,7 @@ add_executable(CheckExistingAttributesInNetworkFile CheckExistingAttributesInNet
         ../Algorithms/KaRRi/EllipticBCH/EllipticBucketsUpdater.h
         ../Algorithms/KaRRi/RouteState/RouteStateDataType.h
         ../Algorithms/KaRRi/LastStopSearches/LastStopBucketsUpdater.h
+        ../Algorithms/KaRRi/EllipticBCH/BucketsWrapper.h
 )
 target_compile_definitions(CheckExistingAttributesInNetworkFile PRIVATE CSV_IO_NO_THREAD)
 
