--- a/RawData/CMakeLists.txt
+++ b/RawData/CMakeLists.txt
@@ -62,6 +62,7 @@ add_executable(CheckExistingAttributesInNetworkFile CheckExistingAttributesInNet
         ../Algorithms/KaRRi/EllipticBCH/BucketsWrapper.h
         ../Algorithms/KaRRi/AssignmentManager.h
         ../Algorithms/KaRRi/BaseObjects/VehicleRouteData.h
+        ../Algorithms/KaRRi/BaseObjects/ChangesWrapper.h
 )
 target_compile_definitions(CheckExistingAttributesInNetworkFile PRIVATE CSV_IO_NO_THREAD)
 
