--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "External/json"]
 	path = External/json
 	url = https://github.com/nlohmann/json
+[submodule "External/kassert"]
+	path = External/kassert
+	url = git@github.com:kamping-site/kassert.git
