Added boost dependency to CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,9 +70,10 @@ endif (CMAKE_BUILD_TYPE STREQUAL "Debug")
 
 include_directories(${CMAKE_SOURCE_DIR})
 
-# Find openmp and proj libraries installed via package manager
+# Find openmp libraries installed via package manager
 find_package(OpenMP)
 find_library(PROJ_LIBRARY proj)
+find_package(Boost REQUIRED)
 
 # Add json library from git submodule
 set(JSON_BuildTests OFF CACHE INTERNAL "")
