--- a/Launchers/CMakeLists.txt
+++ b/Launchers/CMakeLists.txt
@@ -39,7 +39,7 @@ target_link_libraries(karri ${RoutingKit_LIBRARY})
 if(OpenMP_FOUND)
     target_link_libraries(karri OpenMP::OpenMP_CXX)
 endif()
-target_link_libraries(karri kassert)
+target_link_libraries(karri kassert ${BOOST_LIBRARIES})
 
 # include KaRRi compile time parameters
 include(KaRRI_compile_time_parameters.cmake)
