--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,6 @@ include_directories(${CMAKE_SOURCE_DIR})
 # Find openmp libraries installed via package manager
 find_package(OpenMP)
 find_library(PROJ_LIBRARY proj)
-find_package(Boost REQUIRED)
 
 # Add json library from git submodule
 set(JSON_BuildTests OFF CACHE INTERNAL "")
@@ -98,6 +97,11 @@ include_directories(External/randomc)
 include_directories(External/rapidxml)
 include_directories(External/stocc)
 include_directories(External/vectorclass)
+
+set(REQ_BOOST_LIBS align assert config core static_assert)
+foreach(BOOST_LIB_NAME ${REQ_BOOST_LIBS})
+  include_directories(External/boost/libs/${BOOST_LIB_NAME})
+endforeach()
 
 
 foreach(SRC_DIR ${SOURCE_DIRECTORIES})
