--- a/RawData/CMakeLists.txt
+++ b/RawData/CMakeLists.txt
@@ -24,6 +24,10 @@
 # ******************************************************************************
 
 
+add_executable(ComputeFreeFlowPaths ComputeFreeFlowPaths.cc)
+target_compile_definitions(ComputeFreeFlowPaths PRIVATE CSV_IO_NO_THREAD)
+target_link_libraries(ComputeFreeFlowPaths ${PROJ_LIBRARY} ${RoutingKit_LIBRARY} kassert)
+
 add_executable(ConvertGraph ConvertGraph.cc)
 target_compile_definitions(ConvertGraph PRIVATE CSV_IO_NO_THREAD)
 target_link_libraries(ConvertGraph ${PROJ_LIBRARY} ${RoutingKit_LIBRARY} kassert)
