Fixed oversight in AddStaTraversalCost for floating point traversal costs.

--- a/RawData/CMakeLists.txt
+++ b/RawData/CMakeLists.txt
@@ -41,6 +41,10 @@ add_executable(ConvertGraph ConvertGraph.cc)
 target_compile_definitions(ConvertGraph PRIVATE CSV_IO_NO_THREAD)
 target_link_libraries(ConvertGraph ${PROJ_LIBRARY} ${RoutingKit_LIBRARY} kassert ${BOOST_LIBRARIES})
 
+add_executable(FlowsRoutingKitToCsv FlowsRoutingKitToCsv.cc)
+target_compile_definitions(FlowsRoutingKitToCsv PRIVATE CSV_IO_NO_THREAD)
+target_link_libraries(FlowsRoutingKitToCsv ${PROJ_LIBRARY} ${RoutingKit_LIBRARY} kassert ${BOOST_LIBRARIES})
+
 add_executable(GenerateODPairs GenerateODPairs.cc)
 target_compile_definitions(GenerateODPairs PRIVATE CSV_IO_NO_THREAD)
 target_link_libraries(GenerateODPairs kassert ${BOOST_LIBRARIES})
