--- a/Launchers/CMakeLists.txt
+++ b/Launchers/CMakeLists.txt
@@ -27,6 +27,7 @@
 add_executable(RunP2PAlgo RunP2PAlgo.cc)
 target_compile_definitions(RunP2PAlgo PRIVATE CSV_IO_NO_THREAD)
 target_link_libraries(RunP2PAlgo ${RoutingKit_LIBRARY} kassert ${BOOST_LIBRARIES})
+target_include_directories(RunP2PAlgo SYSTEM PRIVATE ${RoutingKit_INCLUDE_DIR})
 if(OpenMP_FOUND)
     target_link_libraries(RunP2PAlgo OpenMP::OpenMP_CXX)
 endif()
@@ -36,12 +37,14 @@ add_executable(mixfix FindMixedFixedFlexibleNetwork.cpp)
 target_compile_definitions(mixfix PRIVATE CSV_IO_NO_THREAD)
 target_link_libraries(mixfix ${RoutingKit_LIBRARY} nlohmann_json)
 target_link_libraries(mixfix kassert)
+target_include_directories(mixfix SYSTEM PRIVATE ${RoutingKit_INCLUDE_DIR})
 
 
 # Executable for KaRRi Dynamic Taxi Sharing Simulation
 add_executable(karri KaRRi.cpp)
 target_compile_definitions(karri PRIVATE CSV_IO_NO_THREAD)
 target_link_libraries(karri ${RoutingKit_LIBRARY} kassert ${BOOST_LIBRARIES})
+target_include_directories(karri SYSTEM PRIVATE ${RoutingKit_INCLUDE_DIR})
 if(OpenMP_FOUND)
     target_link_libraries(karri OpenMP::OpenMP_CXX)
 endif()
